18_reverse_str/grade.txt
Grading at Fri Feb 15 18:42:58 UTC 2019
Attempting to compile  reverse.c
reverse.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
The code did not compile!

Overall Grade: F
